main page toggle on day/night button selection

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="stanley">
 
 <head>
   <meta charset="UTF-8" />
@@ -29,7 +29,7 @@
     <!-- image 1 -->
     <div class="list">
       <div class="item">
-        <img src="./assets/images/philly-dark.png">
+        <img id="big-philly" src="./assets/images/philly-dark.png">
         <div class="content">
           <div class="state">Pennsylvania</div>
           <div class="city">Philadelphia</div>
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/tampa-dark.png">
+        <img id="big-tampa" src="./assets/images/tampa-dark.png">
         <div class="content">
           <div class="state">Florida</div>
           <div class="city">Tampa</div>
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/miami-dark1.png">
+        <img id="big-miami" src="./assets/images/miami-dark1.png">
         <div class="content">
           <div class="state">Florida</div>
           <div class="city">Miami</div>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/pitt-dark.png">
+        <img id="big-pitt" src="./assets/images/pitt-dark.png">
         <div class="content">
           <div class="state">Pennsylvania</div>
           <div class="city">Pittsburgh</div>
@@ -89,7 +89,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="./assets/images/atlanta-dark.png">
+        <img id="big-atlanta" src="./assets/images/atlanta-dark.png">
         <div class="content">
           <div class="state">Georgia</div>
           <div class="city">Atlanta</div>
