modified mainpage.css , index.html and mainpage.js
added time class to index.html to for css keyframe animation.

added initial media query for smaller screens - need to index later upon completion.

added animations via keyframe to varies sections on page to control user experience and response.

added initial JavaScript syntax to define need variables

added function to control next button and cycle backgrounds

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
       <button id="back"><-</button>
       <button id="forward">-></button>
     </div>
+    <div class="time"></div>
   </div>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
