CRITICAL WARNING- DO NOT ERASE
Pushing current updates to branch, animations not working as suspected. Going starting to refactor code. Pushing to have known semi-working version with bugs incase of restore needed.

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     </div>
     <!-- slider movement arrows -->
     <div class="slidearrow">
-      <button id="back"><-</button>
-      <button id="forward">-></button>
+      <button id="back"><</button>
+      <button id="forward">></button>
     </div>
     <div class="time"></div>
   </div>
