--- a/index.html
+++ b/index.html
@@ -1,184 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Poppins:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&family=Shrikhand&display=swap" rel="stylesheet">
-  <!-- mainpage CSS -->
-  <link rel="stylesheet" href="./assets/css/mainpage.css">
-  <title>Journey's End | Enjoy The Journey</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Poppins:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&family=Shrikhand&display=swap" rel="stylesheet">
+        <!-- mainpage CSS -->
+        <link rel="stylesheet" href="./assets/css/mainpage.css">
+        <title>Journey's End | Enjoy The Journey</title>
+    </head>
 
 <body>
-<!-- Header Design -->
-  <header>
-    <nav>
-      <a href="">Philadelphia</a>
-      <a href="">Tampa</a>
-      <a href="">Miami</a>
-      <a href="">Pittsburgh</a>
-      <a href="">Atlanta</a>
-    </nav>
-  </header>
+    <!-- Header Design -->
+    <header>
+        <nav>
+            <a href="">Philadelphia</a>
+            <a href="">Tampa</a>
+            <a href="">Miami</a>
+            <a href="">Pittsburgh</a>
+            <a href="">Atlanta</a>
+        </nav>
+    </header>
 
-  <!-- Image slider -->
-  <div class="slider"> 
-    <!-- images list -->
-    <!-- image 1 -->
-    <div class="list">
-      <div class="item">
-        <img src="./assets/images/philly-dark.png">
-        <div class="content">
-          <div class="state">Pennsylvania</div>
-          <div class="city">Philadelphia</div>
-          <div class="nickname">Brotherly Love</div>
-          <div class="des">
-              Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
-          </div>
-          <div class="buttons">
-            <button>Day</button>
-            <button>Night</button>
-          </div>
+    <!-- Image Slider -->
+    <div class="slider">
+        <!-- Images List -->
+        <div class="list">
+            <!-- Image 1 -->
+            <div class="item">
+                <img src="./assets/images/philly-dark.png">
+                <div class="content">
+                    <div class="state">Pennsylvania</div>
+                    <div class="city">Philadelphia</div>
+                    <div class="nickname">Brotherly Love</div>
+                    <div class="des">>
+                        Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
+                    </div>
+                    <div class="buttons">
+                        <button>Day</button>
+                        <button>Night</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/tampa-dark.png">
+                <div class="content">
+                <div class="state">Florida</div>
+                <div class="city">Tampa</div>
+                <div class="nickname">Big Guava</div>
+                <div class="des">
+                    Tampa is a city on Tampa Bay, along Florida’s Gulf Coast. A major business center, it’s also known for its museums and other cultural offerings. Busch Gardens is an African-themed amusement park with thrill rides and animal-viewing areas. The historic Ybor City neighborhood, developed by Cuban and Spanish cigar-factory workers at the turn of the 20th century, is a dining and nightlife destination.
+                </div>
+                <div class="buttons">
+                    <button>Day</button>
+                    <button>Night</button>
+                </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/miami-dark1.png">
+                <div class="content">
+                    <div class="state">Florida</div>
+                    <div class="city">Miami</div>
+                    <div class="nickname">Magic City</div>
+                    <div class="des">
+                        Miami, officially the City of Miami, is a coastal metropolis located in Miami-Dade County in southeastern Florida, US. With a population of 467,963 as of the 2020 census, it is the 44th-largest city in the United States and the core of the nation's eighth-largest metropolitan area.
+                    </div>
+                    <div class="buttons">
+                    <button>Day</button>
+                    <button>Night</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/pitt-dark.png">
+                <div class="content">
+                    <div class="state">Pennsylvania</div>
+                    <div class="city">Pittsburgh</div>
+                    <div class="nickname">Steel City</div>
+                    <div class="des">
+                        Pittsburgh is a city in western Pennsylvania at the junction of 3 rivers. Its Gilded Age sites, including the Carnegie Museum of Natural History, the Carnegie Museum of Art and the Phipps Conservatory and Botanical Gardens, speak to its history as an early-20th-century industrial capital. In the North Shore neighborhood are the modern Andy Warhol Museum, Heinz Field football stadium and PNC Park baseball stadium.
+                    </div>
+                    <div class="buttons">
+                    <button>Day</button>
+                    <button>Night</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/atlanta-dark.png">
+                <div class="content">
+                    <div class="state">Georgia</div>
+                    <div class="city">Atlanta</div>
+                    <div class="nickname">Hot'lanta</div>
+                    <div class="des">
+                        Atlanta is the capital of the U.S. state of Georgia. It played an important part in both the Civil War and the 1960s Civil Rights Movement. Atlanta History Center chronicles the city's past, and the Martin Luther King Jr. National Historic Site is dedicated to the African-American leader’s life and times.
+                    </div>
+                    <div class="buttons">
+                        <button>Day</button>
+                        <button>Night</button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="item">
-        <img src="./assets/images/tampa-dark.png">
-        <div class="content">
-          <div class="state">Florida</div>
-          <div class="city">Tampa</div>
-          <div class="nickname">Big Guava</div>
-          <div class="des">
-              Tampa is a city on Tampa Bay, along Florida’s Gulf Coast. A major business center, it’s also known for its museums and other cultural offerings. Busch Gardens is an African-themed amusement park with thrill rides and animal-viewing areas. The historic Ybor City neighborhood, developed by Cuban and Spanish cigar-factory workers at the turn of the 20th century, is a dining and nightlife destination.
-          </div>
-          <div class="buttons">
-            <button>Day</button>
-            <button>Night</button>
-          </div>
+        <!-- Slider Preview Cards -->
+        <div class="thumbnail">
+            <div class="item">
+                <img src="./assets/images/philly-dark.png">
+                <div class="content">
+                    <div class="title">
+                        Philadelphia
+                    </div>
+                    <div class="description">
+                        Brotherly Love
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/tampa-dark.png">
+                <div class="content">
+                    <div class="title">
+                        Tampa
+                    </div>
+                    <div class="description">
+                        Big Guava
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/miami-dark1.png">
+                <div class="content">
+                    <div class="title">
+                        Miami
+                    </div>
+                    <div class="description">
+                        Magic
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/pitt-dark.png">
+                <div class="content">
+                    <div class="title">
+                        Pittsburgh
+                    </div>
+                    <div class="description">
+                        Steel City
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/images/atlanta-dark.png">
+                <div class="content">
+                    <div class="title">
+                        Atlana
+                    </div>
+                    <div class="description">
+                        Hot'lanta
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="item">
-        <img src="./assets/images/miami-dark1.png">
-        <div class="content">
-          <div class="state">Florida</div>
-          <div class="city">Miami</div>
-          <div class="nickname">Magic City</div>
-          <div class="des">
-              Miami, officially the City of Miami, is a coastal metropolis located in Miami-Dade County in southeastern Florida, US. With a population of 467,963 as of the 2020 census, it is the 44th-largest city in the United States and the core of the nation's eighth-largest metropolitan area.
-          </div>
-          <div class="buttons">
-            <button>Day</button>
-            <button>Night</button>
-          </div>
+        <!--slider movement arrows-->
+        <div class="slidearrow">
+            <button id="backward"><</button>
+            <button id="forward">></button>
         </div>
-      </div>
-      <div class="item">
-        <img src="./assets/images/pitt-dark.png">
-        <div class="content">
-          <div class="state">Pennsylvania</div>
-          <div class="city">Pittsburgh</div>
-          <div class="nickname">Steel City</div>
-          <div class="des">
-              Pittsburgh is a city in western Pennsylvania at the junction of 3 rivers. Its Gilded Age sites, including the Carnegie Museum of Natural History, the Carnegie Museum of Art and the Phipps Conservatory and Botanical Gardens, speak to its history as an early-20th-century industrial capital. In the North Shore neighborhood are the modern Andy Warhol Museum, Heinz Field football stadium and PNC Park baseball stadium.
-          </div>
-          <div class="buttons">
-            <button>Day</button>
-            <button>Night</button>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <img src="./assets/images/atlanta-dark.png">
-        <div class="content">
-          <div class="state">Georgia</div>
-          <div class="city">Atlanta</div>
-          <div class="nickname">Hot'lanta</div>
-          <div class="des">
-              Atlanta is the capital of the U.S. state of Georgia. It played an important part in both the Civil War and the 1960s Civil Rights Movement. Atlanta History Center chronicles the city's past, and the Martin Luther King Jr. National Historic Site is dedicated to the African-American leader’s life and times.
-          </div>
-          <div class="buttons">
-            <button>Day</button>
-            <button>Night</button>
-          </div>
-        </div>
+        <div class="time"></div>
     </div>
-    <!-- Slider Preview Cards -->
-    <div class="thumbnail">
-      <div class="card">
-        <img src="./assets/images/philly-dark.png">
-        <div class="content">
-          <div class="title">
-            Philadelphia
-          </div>
-          <div class="des">
-            Brotherly Love
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <img src="./assets/images/tampa-dark.png">
-        <div class="content">
-          <div class="title">
-            Tampa
-          </div>
-          <div class="des">
-            Big Guava
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <img src="./assets/images/miami-dark1.png">
-        <div class="content">
-          <div class="title">
-            Miami
-          </div>
-          <div class="des">
-            Magic
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <img src="./assets/images/pitt-dark.png">
-        <div class="content">
-          <div class="title">
-            Pittsburgh
-          </div>
-          <div class="des">
-            Steel City
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <img src="./assets/images/atlanta-dark.png">
-        <div class="content">
-          <div class="title">
-            Atlanta
-          </div>
-          <div class="des">
-            Hot'lanta
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- slider movement arrows -->
-    <div class="slidearrow">
-      <button id="back"><</button>
-      <button id="forward">></button>
-    </div>
-    <div class="time"></div>
-  </div>
-  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="./assets/JavaScript/mainpage.js"></script>
-
 </body>
-
 </html>
