--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Poppins:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&family=Shrikhand&display=swap" rel="stylesheet">
-        <!-- mainpage CSS -->
-        <link rel="stylesheet" href="./assets/css/mainpage.css">
-        <title>Journey's End | Enjoy The Journey</title>
-    </head>
-
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- mainpage CSS -->
+    <link rel="stylesheet" href="./assets/css/mainpage.css">
+    <title>Journey's End | Enjoy The Journey</title>
+</head>
 <body>
-    <!-- Header Design -->
     <header>
         <nav>
             <a href="">Philadelphia</a>
@@ -47,21 +41,23 @@
                     </div>
                 </div>
             </div>
+            <!-- Image 2 -->
             <div class="item">
                 <img src="./assets/images/tampa-dark.png">
                 <div class="content">
-                <div class="state">Florida</div>
-                <div class="city">Tampa</div>
-                <div class="nickname">Big Guava</div>
-                <div class="des">
-                    Tampa is a city on Tampa Bay, along Florida’s Gulf Coast. A major business center, it’s also known for its museums and other cultural offerings. Busch Gardens is an African-themed amusement park with thrill rides and animal-viewing areas. The historic Ybor City neighborhood, developed by Cuban and Spanish cigar-factory workers at the turn of the 20th century, is a dining and nightlife destination.
-                </div>
-                <div class="buttons">
-                    <button>Day</button>
-                    <button>Night</button>
-                </div>
+                    <div class="state">Florida</div>
+                    <div class="city">Tampa</div>
+                    <div class="nickname">Big Guava</div>
+                    <div class="des">
+                        Tampa is a city on Tampa Bay, along Florida’s Gulf Coast. A major business center, it’s also known for its museums and other cultural offerings. Busch Gardens is an African-themed amusement park with thrill rides and animal-viewing areas. The historic Ybor City neighborhood, developed by Cuban and Spanish cigar-factory workers at the turn of the 20th century, is a dining and nightlife destination.
+                    </div>
+                    <div class="buttons">
+                        <button>Day</button>
+                        <button>Night</button>
+                    </div>
                 </div>
             </div>
+            <!-- Image 3 -->
             <div class="item">
                 <img src="./assets/images/miami-dark1.png">
                 <div class="content">
@@ -72,11 +68,12 @@
                         Miami, officially the City of Miami, is a coastal metropolis located in Miami-Dade County in southeastern Florida, US. With a population of 467,963 as of the 2020 census, it is the 44th-largest city in the United States and the core of the nation's eighth-largest metropolitan area.
                     </div>
                     <div class="buttons">
-                    <button>Day</button>
-                    <button>Night</button>
+                        <button>Day</button>
+                        <button>Night</button>
                     </div>
                 </div>
             </div>
+            <!-- Image 4 -->
             <div class="item">
                 <img src="./assets/images/pitt-dark.png">
                 <div class="content">
@@ -87,11 +84,12 @@
                         Pittsburgh is a city in western Pennsylvania at the junction of 3 rivers. Its Gilded Age sites, including the Carnegie Museum of Natural History, the Carnegie Museum of Art and the Phipps Conservatory and Botanical Gardens, speak to its history as an early-20th-century industrial capital. In the North Shore neighborhood are the modern Andy Warhol Museum, Heinz Field football stadium and PNC Park baseball stadium.
                     </div>
                     <div class="buttons">
-                    <button>Day</button>
-                    <button>Night</button>
+                        <button>Day</button>
+                        <button>Night</button>
                     </div>
                 </div>
             </div>
+            <!-- Image 5 -->
             <div class="item">
                 <img src="./assets/images/atlanta-dark.png">
                 <div class="content">
@@ -108,12 +106,13 @@
                 </div>
             </div>
         </div>
-        <!-- Slider Preview Cards -->
+        <!-- list thumbnail -->
         <div class="thumbnail">
+            <!-- thumbnail 1 -->
             <div class="item">
                 <img src="./assets/images/philly-dark.png">
                 <div class="content">
-                    <div class="title">
+                    <div class="city">
                         Philadelphia
                     </div>
                     <div class="description">
@@ -121,10 +120,11 @@
                     </div>
                 </div>
             </div>
+            <!-- thumbnail 2 -->
             <div class="item">
                 <img src="./assets/images/tampa-dark.png">
                 <div class="content">
-                    <div class="title">
+                    <div class="city">
                         Tampa
                     </div>
                     <div class="description">
@@ -132,21 +132,23 @@
                     </div>
                 </div>
             </div>
+            <!-- thumbnail 3 -->
             <div class="item">
                 <img src="./assets/images/miami-dark1.png">
                 <div class="content">
-                    <div class="title">
+                    <div class="city">
                         Miami
                     </div>
                     <div class="description">
-                        Magic
+                        Magic City
                     </div>
                 </div>
             </div>
+            <!-- thumbnail 4 -->
             <div class="item">
                 <img src="./assets/images/pitt-dark.png">
                 <div class="content">
-                    <div class="title">
+                    <div class="city">
                         Pittsburgh
                     </div>
                     <div class="description">
@@ -154,11 +156,12 @@
                     </div>
                 </div>
             </div>
+            <!-- thumbnail 5 -->
             <div class="item">
                 <img src="./assets/images/atlanta-dark.png">
                 <div class="content">
-                    <div class="title">
-                        Atlana
+                    <div class="city">
+                        Atlanta
                     </div>
                     <div class="description">
                         Hot'lanta
@@ -166,17 +169,15 @@
                 </div>
             </div>
         </div>
-        <!--slider movement arrows-->
-        <div class="slidearrow">
-            <button id="backward"><</button>
-            <button id="forward">></button>
+        <!-- next prev -->
+        <div class="arrowIcon">
+            <button id="previous"><</button>
+            <button id="next">></button>
         </div>
+        <!-- time running -->
         <div class="time"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
     <script src="./assets/JavaScript/mainpage.js"></script>
 </body>
 </html>
