--- a/secondarypage.html
+++ b/secondarypage.html
@@ -90,7 +90,24 @@
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
                 </div>
+                <div class="col m-3 p-3 rounded text-center cards">
+                    <h1 class="text-decoration-underline">Restaurant</h1>
+                    <!-- Photo ID for API will be retaurant-photo -->
+                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="retaurant-photo">
+                    <!-- Description ID for API will be retaurant-description -->
+                    <p id="retaurant-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <!-- URL ID for API will be retaurant-url -->
+                    <p><a href="#" id="retaurant-url">TripAdvisor Link</a></p>
+                    <!-- We can use this to randomize a new selection from API -->
+                    <button class="btn-lg">Try again</button>
+                </div>
             </div>
+            <div class="row">
+                <div class="col m-3 p-3 rounded text-center cards">
+                    <h1 class="text-decoration-underline">5 Day Forecast</h1>
+                    <!-- Photo ID for API will be retaurant-photo -->
+                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="retaurant-photo">
+
 
         </div>
         <!-- <footer>
