--- a/secondarypage.html
+++ b/secondarypage.html
@@ -17,6 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Poppins:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&family=Shrikhand&display=swap" rel="stylesheet">
         <!-- secondarypage CSS -->
         <link rel="stylesheet" href="./assets/css/secondarypage.css">
+        <link rel="stylesheet" href="./assets/css/weather.css">
         <title>Date Night Results!</title>
     </head>
     <body>
@@ -69,44 +70,140 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Restaurant</h1>
+                    <h1 class="text-decoration-underline">Event 1</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
-                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="retaurant-photo">
+                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="event1-photo">
                     <!-- Description ID for API will be retaurant-description -->
-                    <p id="retaurant-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event1-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
-                    <p><a href="#" id="retaurant-url">TripAdvisor Link</a></p>
+                    <p><a href="#" id="event1-url">TripAdvisor Link</a></p>
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Attraction</h1>
+                    <h1 class="text-decoration-underline">Event 2</h1>
                     <!-- Photo ID for API will be attraction-photo -->
-                    <img src="./assets/images/attrfiller.jpeg" height="200px" width="300px" class="p-1" id="attraction-photo">
+                    <img src="./assets/images/attrfiller.jpeg" height="200px" width="300px" class="p-1" id="event2-photo">
                     <!-- Description ID for API will be attraction-description -->
-                    <p id="attraction-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event2-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be attraction-url -->
-                    <p><a href="#" id="attraction-url">TripAdvisor Link</a></p>
+                    <p><a href="#" id="event2-url">TripAdvisor Link</a></p>
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Restaurant</h1>
+                    <h1 class="text-decoration-underline">Event 3</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
-                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="retaurant-photo">
+                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="event3-photo">
                     <!-- Description ID for API will be retaurant-description -->
-                    <p id="retaurant-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event3-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
-                    <p><a href="#" id="retaurant-url">TripAdvisor Link</a></p>
+                    <p><a href="#" id="event3-url">TripAdvisor Link</a></p>
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col m-3 p-3 rounded text-center cards">
+                <div class="col rounded text-center cards">
                     <h1 class="text-decoration-underline">5 Day Forecast</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
-                    <img src="./assets/images/restfiller.webp" height="200px" width="300px" class="p-1" id="retaurant-photo">
+                    <div class="page-content page-container" id="page-content">
+                        <div class="padding">
+                            <div class="row container d-flex justify-content-center">
+                    <div class="col-lg-12 grid-margin stretch-card">
+                                  <!--weather card-->
+                                  <div class="card card-weather">
+                                    <div class="card-body">
+                                      <div class="weather-date-location">
+                                        <h3>Friday</h3>
+                                        <p class="text-gray">
+                                          <span class="weather-date">25 March, 2019</span>
+                                          <span class="weather-location">Sydney, Australia</span>
+                                        </p>
+                                      </div>
+                                      <div class="weather-data d-flex">
+                                        <div class="mr-auto">
+                                          <h4 class="display-3">32
+                                            <span class="symbol">&deg;</span>C</h4>
+                                          <p>
+                                            Cloudy
+                                          </p>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="card-body p-0">
+                                      <div class="d-flex weakly-weather">
+                                        <div class="weakly-weather-item">
+                                          <p class="mb-0">
+                                            Sun
+                                          </p>
+                                          <i class="mdi mdi-weather-cloudy"></i>
+                                          <p class="mb-0">
+                                            30&deg;
+                                          </p>
+                                        </div>
+                                        <div class="weakly-weather-item">
+                                          <p class="mb-1">
+                                            Mon
+                                          </p>
+                                          <i class="mdi mdi-weather-hail"></i>
+                                          <p class="mb-0">
+                                            31&deg;
+                                          </p>
+                                        </div>
+                                        <div class="weakly-weather-item">
+                                          <p class="mb-1">
+                                            Tue
+                                          </p>
+                                          <i class="mdi mdi-weather-partlycloudy"></i>
+                                          <p class="mb-0">
+                                            28&deg;
+                                          </p>
+                                        </div>
+                                        <div class="weakly-weather-item">
+                                          <p class="mb-1">
+                                            Wed
+                                          </p>
+                                          <i class="mdi mdi-weather-pouring"></i>
+                                          <p class="mb-0">
+                                            30&deg;
+                                          </p>
+                                        </div>
+                                        <div class="weakly-weather-item">
+                                          <p class="mb-1">
+                                            Thu
+                                          </p>
+                                          <i class="mdi mdi-weather-pouring"></i>
+                                          <p class="mb-0">
+                                            29&deg;
+                                          </p>
+                                        </div>
+                                        <div class="weakly-weather-item">
+                                          <p class="mb-1">
+                                            Fri
+                                          </p>
+                                          <i class="mdi mdi-weather-snowy-rainy"></i>
+                                          <p class="mb-0">
+                                            31&deg;
+                                          </p>
+                                        </div>
+                                        <div class="weakly-weather-item">
+                                          <p class="mb-1">
+                                            Sat
+                                          </p>
+                                          <i class="mdi mdi-weather-snowy"></i>
+                                          <p class="mb-0">
+                                            32&deg;
+                                          </p>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <!--weather card ends-->
+                                </div>
+                                </div>
+                                </div>
+                                </div>
 
 
         </div>
