add javascript, link to html

--- a/index.html
+++ b/index.html
@@ -177,5 +177,6 @@
     </div>
 
     <script src="./assets/JavaScript/mainpage.js"></script>
+    <script src="./assets/JavaScript/modetoggle.js"></script>
 </body>
 </html>
