--- a/secondarypage.html
+++ b/secondarypage.html
@@ -118,7 +118,7 @@
                                         <h3>Friday</h3>
                                         <p class="text-gray">
                                           <span class="weather-date">25 March, 2019</span>
-                                          <span class="weather-location">Sydney, Australia</span>
+                                          <span class="weather-location" id="cityforweather"></span>
                                         </p>
                                       </div>
                                       <div class="weather-data d-flex">
