--- a/pittsburgh.html
+++ b/pittsburgh.html
@@ -190,7 +190,7 @@
         <script src="./assets/JavaScript/secondarypage.js"></script>
         <script src="./assets/JavaScript/weather.js"></script>
         <script>
-        getWeather('tampa');
+        getWeather('pittsburgh');
         </script>
     </body>
 </html>
