--- a/developers.html
+++ b/developers.html
@@ -39,7 +39,7 @@
     <h1 class="text-center pt-5">Meet The Team</h1>
     <div class="cards-wrapper">
         <div class="card" style="width: 18rem;">
-            <img src="./assets/images/atlanta-dark.png" class="card-img-top" alt="...">
+            <img src="./assets/images/stephanie.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Stephanie Carr</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/joseph.JPG" class="card-img-top" alt="Joseph Ruff">
+            <img src="./assets/images/joe.png" class="card-img-top" alt="Joseph Ruff">
             <div class="card-body">
               <h5 class="card-title">Joseph Ruff</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/davidr.JPG" class="card-img-top" alt="David Rauf">
+            <img src="./assets/images/david.jpg" class="card-img-top" alt="David Rauf">
             <div class="card-body">
               <h5 class="card-title">David Rauf</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/zach.jpg" class="card-img-top" alt="Zachary Polof">
+            <img src="./assets/images/zachary.jpg" class="card-img-top" alt="Zachary Polof">
             <div class="card-body">
               <h5 class="card-title">Zachary Polof</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="./assets/images/peter.png" class="card-img-top" alt="...">
+            <img src="./assets/images/pete.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Peter Smith</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
