mainpage.css styling changes
Started modifying colors to better fit profile and color palette of cities.

Added opaque background behind text to make text more legible.

general font size and location changes for better positioning on screen and color theory.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="">Miami</a>
             <a href="">Pittsburgh</a>
             <a href="">Atlanta</a>
+            <a href="./developers.html">Meet Our Developers</a>
         </nav>
     </header>
     <!-- Image Slider -->
@@ -32,7 +33,7 @@
                     <div class="state">Pennsylvania</div>
                     <div class="city">Philadelphia</div>
                     <div class="nickname">Brotherly Love</div>
-                    <div class="des">>
+                    <div class="des">
                         Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
                     </div>
                     <div class="buttons">
