Apply dark/light toggle to thumbnails
added IDs to thumbnail images

added code to modetoggle.js to include thumbnails in the toggle functions

*code is not dry*

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="thumbnail">
             <!-- thumbnail 1 -->
             <div class="item">
-                <img src="./assets/images/philly-dark.png">
+                <img id="lil-philly" src="./assets/images/philly-dark.png">
                 <div class="content">
                     <div class="city">
                         Philadelphia
@@ -123,7 +123,7 @@
             </div>
             <!-- thumbnail 2 -->
             <div class="item">
-                <img src="./assets/images/tampa-dark.png">
+                <img id="lil-tampa" src="./assets/images/tampa-dark.png">
                 <div class="content">
                     <div class="city">
                         Tampa
@@ -135,7 +135,7 @@
             </div>
             <!-- thumbnail 3 -->
             <div class="item">
-                <img src="./assets/images/miami-dark1.png">
+                <img id="lil-miami" src="./assets/images/miami-dark1.png">
                 <div class="content">
                     <div class="city">
                         Miami
@@ -147,7 +147,7 @@
             </div>
             <!-- thumbnail 4 -->
             <div class="item">
-                <img src="./assets/images/pitt-dark.png">
+                <img id="lil-pitt" src="./assets/images/pitt-dark.png">
                 <div class="content">
                     <div class="city">
                         Pittsburgh
@@ -159,7 +159,7 @@
             </div>
             <!-- thumbnail 5 -->
             <div class="item">
-                <img src="./assets/images/atlanta-dark.png">
+                <img id="lil-atlanta" src="./assets/images/atlanta-dark.png">
                 <div class="content">
                     <div class="city">
                         Atlanta
