Refactor modetoggle.js button functions

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
                     </div>
                     <div class="buttons">
-                        <button id="philly-AM">Day ☀️</button>
-                        <button id="philly-PM">Night 🌒</button>
+                        <button class="dayBtn">Day ☀️</button>
+                        <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
             </div>
@@ -53,8 +53,8 @@
                         Tampa is a city on Tampa Bay, along Florida’s Gulf Coast. A major business center, it’s also known for its museums and other cultural offerings. Busch Gardens is an African-themed amusement park with thrill rides and animal-viewing areas. The historic Ybor City neighborhood, developed by Cuban and Spanish cigar-factory workers at the turn of the 20th century, is a dining and nightlife destination.
                     </div>
                     <div class="buttons">
-                        <button id="tampa-AM">Day ☀️</button>
-                        <button id="tampa-PM">Night 🌒</button>
+                        <button class="dayBtn">Day ☀️</button>
+                        <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
             </div>
@@ -69,8 +69,8 @@
                         Miami, officially the City of Miami, is a coastal metropolis located in Miami-Dade County in southeastern Florida, US. With a population of 467,963 as of the 2020 census, it is the 44th-largest city in the United States and the core of the nation's eighth-largest metropolitan area.
                     </div>
                     <div class="buttons">
-                        <button id="miami-AM">Day ☀️</button>
-                        <button id="miami-PM">Night 🌒</button>
+                        <button class="dayBtn">Day ☀️</button>
+                        <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
             </div>
@@ -85,8 +85,8 @@
                         Pittsburgh is a city in western Pennsylvania at the junction of 3 rivers. Its Gilded Age sites, including the Carnegie Museum of Natural History, the Carnegie Museum of Art and the Phipps Conservatory and Botanical Gardens, speak to its history as an early-20th-century industrial capital. In the North Shore neighborhood are the modern Andy Warhol Museum, Heinz Field football stadium and PNC Park baseball stadium.
                     </div>
                     <div class="buttons">
-                        <button id="pitt-AM">Day ☀️</button>
-                        <button id="pitt-PM">Night 🌒</button>
+                        <button class="dayBtn">Day ☀️</button>
+                        <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
             </div>
@@ -101,8 +101,8 @@
                         Atlanta is the capital of the U.S. state of Georgia. It played an important part in both the Civil War and the 1960s Civil Rights Movement. Atlanta History Center chronicles the city's past, and the Martin Luther King Jr. National Historic Site is dedicated to the African-American leader’s life and times.
                     </div>
                     <div class="buttons">
-                        <button id="atlanta-AM">Day ☀️</button>
-                        <button id="atlanta-PM">Night 🌒</button>
+                        <button class="dayBtn">Day ☀️</button>
+                        <button class="nightBtn">Night 🌒</button>
                     </div>
                 </div>
             </div>
@@ -172,8 +172,8 @@
         </div>
         <!-- next prev -->
         <div class="arrowIcon">
-            <button id="previous"><</button>
-            <button id="next">></button>
+            <button class="previous"><</button>
+            <button class="next">></button>
         </div>
         <!-- time running -->
         <div class="time"></div>
