Returned to last working version
Reverted "dry" image class code & function to previous method

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="list">
             <!-- Image 1 -->
             <div class="item">
-                <img class="philly" src="./assets/images/philly-dark.png">
+                <img id="big-philly" src="./assets/images/philly-dark.png">
                 <div class="content">
                     <div class="state">Pennsylvania</div>
                     <div class="city">Philadelphia</div>
@@ -44,7 +44,7 @@
             </div>
             <!-- Image 2 -->
             <div class="item">
-                <img class="tampa" src="./assets/images/tampa-dark.png">
+                <img id="big-tampa" src="./assets/images/tampa-dark.png">
                 <div class="content">
                     <div class="state">Florida</div>
                     <div class="city">Tampa</div>
@@ -60,7 +60,7 @@
             </div>
             <!-- Image 3 -->
             <div class="item">
-                <img class="miami" src="./assets/images/miami-dark2.png">
+                <img id="big-miami" src="./assets/images/miami-dark2.png">
                 <div class="content">
                     <div class="state">Florida</div>
                     <div class="city">Miami</div>
@@ -76,7 +76,7 @@
             </div>
             <!-- Image 4 -->
             <div class="item">
-                <img class="pitt" src="./assets/images/pitt-dark.png">
+                <img id="big-pitt" src="./assets/images/pitt-dark.png">
                 <div class="content">
                     <div class="state">Pennsylvania</div>
                     <div class="city">Pittsburgh</div>
@@ -92,7 +92,7 @@
             </div>
             <!-- Image 5 -->
             <div class="item">
-                <img class="atlanta" src="./assets/images/atlanta-dark.png">
+                <img id="big-atlanta" src="./assets/images/atlanta-dark.png">
                 <div class="content">
                     <div class="state">Georgia</div>
                     <div class="city">Atlanta</div>
@@ -111,7 +111,7 @@
         <div class="thumbnail">
             <!-- thumbnail 1 -->
             <div class="item">
-                <img class="philly" src="./assets/images/philly-dark.png">
+                <img id="lil-philly" src="./assets/images/philly-dark.png">
                 <div class="content">
                     <div class="city">
                         Philadelphia
@@ -123,7 +123,7 @@
             </div>
             <!-- thumbnail 2 -->
             <div class="item">
-                <img class="tampa" src="./assets/images/tampa-dark.png">
+                <img id="lil-tampa" src="./assets/images/tampa-dark.png">
                 <div class="content">
                     <div class="city">
                         Tampa
@@ -135,7 +135,7 @@
             </div>
             <!-- thumbnail 3 -->
             <div class="item">
-                <img class="miami" src="./assets/images/miami-dark2.png">
+                <img id="lil-miami" src="./assets/images/miami-dark2.png">
                 <div class="content">
                     <div class="city">
                         Miami
@@ -147,7 +147,7 @@
             </div>
             <!-- thumbnail 4 -->
             <div class="item">
-                <img class="pitt" src="./assets/images/pitt-dark.png">
+                <img id="lil-pitt" src="./assets/images/pitt-dark.png">
                 <div class="content">
                     <div class="city">
                         Pittsburgh
@@ -159,7 +159,7 @@
             </div>
             <!-- thumbnail 5 -->
             <div class="item">
-                <img class="atlanta" src="./assets/images/atlanta-dark.png">
+                <img id="lil-atlanta" src="./assets/images/atlanta-dark.png">
                 <div class="content">
                     <div class="city">
                         Atlanta
