--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
         </div>
         <!-- next prev -->
         <div class="arrowIcon">
-            <button class="previous"><</button>
-            <button class="next">></button>
+            <button id="previous"><</button>
+            <button id="next">></button>
         </div>
         <!-- time running -->
         <div class="time"></div>
