tampa compleated with weather feature integration + atlanta integration complete

--- a/indexWithEros.html
+++ b/indexWithEros.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <nav>
-            <a href="">Philadelphia</a>
+            <a id= "philadelphia" href="./philadelphia.html">Philadelphia</a>
             <a id= "tampa" href="./tampa.html">Tampa</a>
-            <a href="">Miami</a>
-            <a href="">Pittsburgh</a>
-            <a href="">Atlanta</a>
+            <a id= "miami" href="./miami.html">Miami</a>
+            <a id= "pittsburgh" href="./pittsburgh.html">Pittsburgh</a>
+            <a id= "atlanta" href="./atlanta.html">Atlanta</a>
         </nav>
     </header>
     <!-- Image Slider -->
