added try-agian button to each city > modified some details > all cities complete

--- a/atlanta.html
+++ b/atlanta.html
@@ -67,6 +67,7 @@
                             <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                         </div>
                     </div>
+                    <button id="tryAgain" class="btn-lg">Try again</button>
                 </div>
             </div>
         </div>
