--- a/miami.html
+++ b/miami.html
@@ -58,11 +58,12 @@
             <div class="mask">
                 <div class="d-flex justify-content-center align-items-center h-100">
                     <div class="text-white">
-                        <h1 class="mb-3 mt-5 pt-5">Tampa</h1>
-                        <h4 class="mb-3 mt-3 pt-3">A beautiful city in central Florida located minutes from beautiful Gulf Coast Beaches</h4>
+                        <h1 class="mb-3 mt-5 pt-5">Miami</h1>
+                        <h4 class="mb-3 mt-3 pt-3">A premier southern city, known for its dense urban culture and hot south beach fashion trends. The home of tommy hilfiger, Gianni Versace RIP and more</h4>
                         <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                     </div>
                 </div>
+                <button id="tryAgain" class="btn-lg">Try again</button>
             </div>
         </div>
         </div>
