--- a/philadelphia.html
+++ b/philadelphia.html
@@ -63,6 +63,7 @@
                         <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                     </div>
                 </div>
+                <button id="tryAgain" class="btn-lg">Try again</button>
             </div>
         </div>
         </div>
