css changes navbar changes
changed navbar to reflect a bootstrap style navbar to incorporate more project criteria and for ease of use.

Modified css properties of .nav-link to change colors and add effects to navbar links.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,28 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="./philadelphia.html">Philadelphia</a>
-            <a href="./tampa.html">Tampa</a>
-            <a href="./miami.html">Miami</a>
-            <a href="./pittsburgh.html">Pittsburgh</a>
-            <a href="./atlanta.html">Atlanta</a>
-            <a href="./developers.html">Meet Our Developers</a>
-        </nav>
+        <nav class="nav">
+            <ul class="nav nav-underline">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./philadelphia.html">Philadelphia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./tampa.html">Tampa</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./miami.html">Miami</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pittsburgh.html">Pittsburgh</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./atlanta.html">Atlanta</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./developers.html">Meet Our Developers</a>
+                </li>
+                </ul>
+            </nav>          
     </header>
     <!-- Image Slider -->
     <div class="slider">
