index.html updates an css updates
updated description for each city for more direct to customer information.

updated spacing on right side of header nav links

added comments for media query updates to make website functional on all screens

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                     <div class="city">Philadelphia</div>
                     <div class="nickname">Brotherly Love</div>
                     <div class="des">
-                        Philadelphia, Pennsylvania’s largest city, is notable for its rich history, on display at the Liberty Bell, Independence Hall (where the Declaration of Independence and Constitution were signed) and other American Revolutionary sites. Also iconic are the steps of the Philadelphia Museum of Art, immortalized by Sylvester Stallone’s triumphant run in the film "Rocky."
+                        ♢ Birthplace of American democracy<br>
+                        ♢ Home to the Liberty Bell<br>
+                        ♢ Dubbed the "City of Brotherly Love"<br>
+                        ♢ Diverse culinary scene.<br>
+                        ♢ Known for a vibrant nightlife<br>
                     </div>
                     <div class="buttons">
                         <button class="dayBtn">Day ☀️</button>
@@ -64,7 +68,11 @@
                     <div class="city">Tampa</div>
                     <div class="nickname">Big Guava</div>
                     <div class="des">
-                        Tampa is a city on Tampa Bay, along Florida’s Gulf Coast. A major business center, it’s also known for its museums and other cultural offerings. Busch Gardens is an African-themed amusement park with thrill rides and animal-viewing areas. The historic Ybor City neighborhood, developed by Cuban and Spanish cigar-factory workers at the turn of the 20th century, is a dining and nightlife destination.
+                        ♢ Famous for it's warm climate and beautiful beaches<br>
+                        ♢ Home to Busch Gardens<br>
+                        ♢ Known for it's Cuban and Spanish cuisine<br>
+                        ♢ Known for it's lively Gasparilla pirate festival<br>
+                        ♢ Live music and nightlife<br>
                     </div>
                     <div class="buttons">
                         <button class="dayBtn">Day ☀️</button>
@@ -80,7 +88,11 @@
                     <div class="city">Miami</div>
                     <div class="nickname">Magic City</div>
                     <div class="des">
-                        Miami, officially the City of Miami, is a coastal metropolis located in Miami-Dade County in southeastern Florida, US. With a population of 467,963 as of the 2020 census, it is the 44th-largest city in the United States and the core of the nation's eighth-largest metropolitan area.
+                        ♢ Coastal metropolis famed for it's Latin culture<br>
+                        ♢ Known for it's beautiful beaches and vibrant nightlife<br>
+                        ♢ Home to the Art Deco Historic District<br>
+                        ♢ Known for it's Cuban influence<br>
+                        ♢ Known for it's Art Basel Miami Beach festival<br>
                     </div>
                     <div class="buttons">
                         <button class="dayBtn">Day ☀️</button>
@@ -96,7 +108,11 @@
                     <div class="city">Pittsburgh</div>
                     <div class="nickname">Steel City</div>
                     <div class="des">
-                        Pittsburgh is a city in western Pennsylvania at the junction of 3 rivers. Its Gilded Age sites, including the Carnegie Museum of Natural History, the Carnegie Museum of Art and the Phipps Conservatory and Botanical Gardens, speak to its history as an early-20th-century industrial capital. In the North Shore neighborhood are the modern Andy Warhol Museum, Heinz Field football stadium and PNC Park baseball stadium.
+                        ♢ Dynamic city renowned for it's steel industry<br>
+                        ♢ Home to the Andy Warhol Museum<br>
+                        ♢ Famous for the three rivers inherit the city<br>
+                        ♢ Known for robust sports culture<br>
+                        ♢ Known for it's burgeoning tech scene.<br>
                     </div>
                     <div class="buttons">
                         <button class="dayBtn">Day ☀️</button>
@@ -112,7 +128,11 @@
                     <div class="city">Atlanta</div>
                     <div class="nickname">Hot'lanta</div>
                     <div class="des">
-                        Atlanta is the capital of the U.S. state of Georgia. It played an important part in both the Civil War and the 1960s Civil Rights Movement. Atlanta History Center chronicles the city's past, and the Martin Luther King Jr. National Historic Site is dedicated to the African-American leader’s life and times.
+                        ♢ Vibrant city known for it's Southern hospitality<br>
+                        ♢ Home to the World of Coca-Cola<br> 
+                        ♢ Known for it's rich history and culture<br>
+                        ♢ Rich in music history, with a thriving music scene<br>
+                        ♢ Dynamic blend of southern charm and urban sophistication<br>
                     </div>
                     <div class="buttons">
                         <button class="dayBtn">Day ☀️</button>
