Image Updates / .JS updates / CSS Updates
Changed main images on dark and light mode to higher resolution images for scalability on different screens.

Edited .html and .JS files to new images links for light dark mode and main display.

Modified partial css to display better on main resolution of 1920 x 1080 - continuing to adjust

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="list">
             <!-- Image 1 -->
             <div class="item">
-                <img id="big-philly" src="./assets/images/philly-dark.png">
+                <img id="big-philly" src="./assets/images/philly--dark2.jpg">
                 <div class="content">
                     <div class="state">Pennsylvania</div>
                     <div class="city">Philadelphia</div>
@@ -62,7 +62,7 @@
             </div>
             <!-- Image 2 -->
             <div class="item">
-                <img id="big-tampa" src="./assets/images/tampa-dark.png">
+                <img id="big-tampa" src="./assets/images/tampa-dark3.jpg">
                 <div class="content">
                     <div class="state">Florida</div>
                     <div class="city">Tampa</div>
@@ -82,7 +82,7 @@
             </div>
             <!-- Image 3 -->
             <div class="item">
-                <img id="big-miami" src="./assets/images/miami-dark2.png">
+                <img id="big-miami" src="./assets/images/miami-dark3.jpg">
                 <div class="content">
                     <div class="state">Florida</div>
                     <div class="city">Miami</div>
@@ -102,7 +102,7 @@
             </div>
             <!-- Image 4 -->
             <div class="item">
-                <img id="big-pitt" src="./assets/images/pitt-dark.png">
+                <img id="big-pitt" src="./assets/images/pitt-dark2.jpg">
                 <div class="content">
                     <div class="state">Pennsylvania</div>
                     <div class="city">Pittsburgh</div>
@@ -145,7 +145,7 @@
         <div class="thumbnail">
             <!-- thumbnail 1 -->
             <div class="item">
-                <img id="lil-philly" src="./assets/images/philly-dark.png">
+                <img id="lil-philly" src="./assets/images/philly--dark2.jpg">
                 <div class="content">
                     <div class="city">
                         Philadelphia
@@ -157,7 +157,7 @@
             </div>
             <!-- thumbnail 2 -->
             <div class="item">
-                <img id="lil-tampa" src="./assets/images/tampa-dark.png">
+                <img id="lil-tampa" src="./assets/images/tampa-dark3.jpg">
                 <div class="content">
                     <div class="city">
                         Tampa
@@ -169,7 +169,7 @@
             </div>
             <!-- thumbnail 3 -->
             <div class="item">
-                <img id="lil-miami" src="./assets/images/miami-dark2.png">
+                <img id="lil-miami" src="./assets/images/miami-dark3.jpg">
                 <div class="content">
                     <div class="city">
                         Miami
@@ -181,7 +181,7 @@
             </div>
             <!-- thumbnail 4 -->
             <div class="item">
-                <img id="lil-pitt" src="./assets/images/pitt-dark.png">
+                <img id="lil-pitt" src="./assets/images/pitt-dark2.jpg">
                 <div class="content">
                     <div class="city">
                         Pittsburgh
