--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- mainpage CSS -->
     <link rel="stylesheet" href="./assets/css/mainpage.css">
+    <link rel="stylesheet" href="./assets/css/mediaquery.css">
     <title>Journey's End | Enjoy The Journey</title>
 </head>
 <body>
