--- a/miami.html
+++ b/miami.html
@@ -54,7 +54,7 @@
         <!-- Want to make text stand out a bit more over the images, not sure best way to make that happen, tried background and it didnt look good -->
         <div class="container-lg">
             <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
-    background-image: url('./assets/images/miami-dark1.png');
+    background-image: url('./assets/images/miami-dark3.jpg');
     background-size: cover;
     background-position: 100%;
     height: 400px;
