--- a/tampa.html
+++ b/tampa.html
@@ -39,7 +39,8 @@
                             <a class="nav-link" href="#">Link 2</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="mode">Toggle Dark Mode
+                            <a class="nav-link" href="#" id="mode">
+                                Toggle Dark Mode
                                 <i class="bi bi-brightness-high-fill"></i>
                             </a>
                         </li>
@@ -53,7 +54,7 @@
         <!-- Want to make text stand out a bit more over the images, not sure best way to make that happen, tried background and it didnt look good -->
         <div class="container-lg">
             <div class="p-3 m-3 text-center bg-image align-items-center justify-content-center rounded" style="
-    background-image: url('./assets/images/tampa-dark.png');
+    background-image: url('./assets/images/tampa-dark2.jpg');
     background-size: cover;
     background-position: 100%;
     height: 400px;
