--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <!-- Image Slider -->
     <div class="slider">
-        <!-- Images List -->
+        <!-- Images List Main -->
         <div class="list">
             <!-- Image 1 -->
             <div class="item">
