dev updates, css, media query, html updates
updated IVIonsters name in dev page, updated ZP description on dev page.

updated arrows on Index.html page

updated header text side on css and mediaquery

--- a/developers.html
+++ b/developers.html
@@ -66,8 +66,9 @@
             <img src="./assets/images/zachary.jpg" class="card-img-top" alt="Zachary Polof">
             <div class="card-body">
               <h5 class="card-title">Zachary Polof</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://github.com/ivionsters" class="btn">ivionsters</a>
+              <p class="card-text">Full-Stack Web Developer + Passionate about programming + building a future in tech + always push boundaries.<br>
+              <strong>Exploring the beauty in the world through technology</strong></p>
+              <a href="https://github.com/ivionsters" class="btn">IVIonsters</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
