--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
         </div>
         <!-- next prev -->
         <div class="arrowIcon">
-            <button id="previous"><</button>
-            <button id="next">></button>
+            <button id="previous">⇦</button>
+            <button id="next">⇨</button>
         </div>
         <!-- time running -->
         <div class="time"></div>
