secondary pages update
started updating secondary pages for each city styling to be more in line with what main page html has, colors have been shifted and applied to be more in line with main page for cohesive design.

--- a/atlanta.html
+++ b/atlanta.html
@@ -61,8 +61,9 @@
                 <div class="mask">
                     <div class="d-flex justify-content-center align-items-center h-100">
                         <div class="text-white">
-                            <h1 class="mb-3 mt-5 pt-5">Atlanta</h1>
-                            <h4 class="mb-3 mt-3 pt-3">A vibrant city known for its rich cultural diversity, thriving music scene, and dynamic blend of Southern charm and urban innovation.</h4>
+                            <h1 class="mb-3 mt-5 pt-5 city">Atlanta</h1>
+                            <h2 class="mb-3 mt-3 pt-3 nickname">Hot'Lanta</h2>
+                            <h4 class="mb-3 mt-3 pt-3 des">A vibrant city known for its rich cultural diversity, thriving music scene, and dynamic blend of Southern charm and urban innovation.</h4>
                             <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                         </div>
                     </div>
@@ -73,7 +74,7 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 1</h1>
+                    <h1 class="text-decoration-underline event">Event 1</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
                     <img
                         src="./assets/images/restfiller.webp"
@@ -83,7 +84,7 @@
                         id="event1-photo"
                     >
                     <!-- Description ID for API will be retaurant-description -->
-                    <p id="event1-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event1-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
                     <p>
                         <a href="#" id="event1-url">TripAdvisor Link</a>
@@ -92,7 +93,7 @@
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 2</h1>
+                    <h1 class="text-decoration-underline event">Event 2</h1>
                     <!-- Photo ID for API will be attraction-photo -->
                     <img
                         src="./assets/images/attrfiller.jpeg"
@@ -102,7 +103,7 @@
                         id="event2-photo"
                     >
                     <!-- Description ID for API will be attraction-description -->
-                    <p id="event2-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event2-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be attraction-url -->
                     <p>
                         <a href="#" id="event2-url">TripAdvisor Link</a>
@@ -111,7 +112,7 @@
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 3</h1>
+                    <h1 class="text-decoration-underline event">Event 3</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
                     <img
                         src="./assets/images/restfiller.webp"
@@ -121,7 +122,7 @@
                         id="event3-photo"
                     >
                     <!-- Description ID for API will be retaurant-description -->
-                    <p id="event3-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event3-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
                     <p>
                         <a href="#" id="event3-url">TripAdvisor Link</a>
