--- a/developers.html
+++ b/developers.html
@@ -16,24 +16,27 @@
 </head>
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-sm sticky-top navy">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Journey's End 
-                    <!-- <img src="./assets/datenight.jpg" height="60px" width="60px"> -->
-                </a>
-                <!-- Links -->
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="developers.html">Our Developers</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Link 2</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="mode">Toggle Dark Mode <i class="bi bi-brightness-high-fill"></i></a>
-                    </li>
-                </ul>
-            </div>
+      <nav class="nav">
+        <ul class="nav nav-underline">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="./index.html">Journeys End</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./tampa.html">Placeholder</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./miami.html">Placeholder</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./pittsburgh.html">Placeholder</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./developers.html">Meet Our Developers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" id="mode">Toggle Mode <i class="bi bi-brightness-high-fill"></i></a>
+            </li>
+            </ul>
         </nav>
     </header>
     <h1 class="text-center pt-5">Meet The Team</h1>
