--- a/philadelphia.html
+++ b/philadelphia.html
@@ -61,8 +61,9 @@
                 <div class="mask">
                     <div class="d-flex justify-content-center align-items-center h-100">
                         <div class="text-white">
-                            <h1 class="mb-3 mt-5 pt-5">Philadelphia</h1>
-                            <h4 class="mb-3 mt-3 pt-3">
+                            <h1 class="mb-3 mt-5 pt-5 city">Philadelphia</h1>
+                            <h2 class="mb-3 mt-3 pt-3 nickname">Brotherly Love</h2>
+                            <h4 class="mb-3 mt-3 pt-3 des">
                                 Known as the birthplace of American democracy, affectionately dubbed the 'City of Brotherly, it boasts a rich cultural tapestry, diverse culinary scene, and vibrant nightlife.
                             </h4>
                             <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
@@ -75,7 +76,7 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 1</h1>
+                    <h1 class="text-decoration-underline event">Event 1</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
                     <img
                         src="./assets/images/restfiller.webp"
@@ -85,7 +86,7 @@
                         id="event1-photo"
                     >
                     <!-- Description ID for API will be retaurant-description -->
-                    <p id="event1-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event1-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
                     <p>
                         <a href="#" id="event1-url">TripAdvisor Link</a>
@@ -94,7 +95,7 @@
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 2</h1>
+                    <h1 class="text-decoration-underline event">Event 2</h1>
                     <!-- Photo ID for API will be attraction-photo -->
                     <img
                         src="./assets/images/attrfiller.jpeg"
@@ -104,7 +105,7 @@
                         id="event2-photo"
                     >
                     <!-- Description ID for API will be attraction-description -->
-                    <p id="event2-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event2-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be attraction-url -->
                     <p>
                         <a href="#" id="event2-url">TripAdvisor Link</a>
@@ -113,7 +114,7 @@
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 3</h1>
+                    <h1 class="text-decoration-underline event">Event 3</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
                     <img
                         src="./assets/images/restfiller.webp"
@@ -123,7 +124,7 @@
                         id="event3-photo"
                     >
                     <!-- Description ID for API will be retaurant-description -->
-                    <p id="event3-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event3-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
                     <p>
                         <a href="#" id="event3-url">TripAdvisor Link</a>
