--- a/tampa.html
+++ b/tampa.html
@@ -21,7 +21,7 @@
         <title>Date Night Results!</title>
     </head>
     <body>
-        <!-- Joe's work with adding a nav bar -->
+        <!-- Joe's work with adding a nav bar(Zach added one no worries XD ) -->
         <!-- I want to figure out how to make the nav bar transparent -->
         <header id="header">
             <nav class="nav">
@@ -56,13 +56,13 @@
     background-image: url('./assets/images/tampa-dark2.jpg');
     background-size: cover;
     background-position: 100%;
-    height: 400px;
-  ">
+    height: 400px;">
                 <div class="mask">
                     <div class="d-flex justify-content-center align-items-center h-100">
                         <div class="text-white">
-                            <h1 class="mb-3 mt-5 pt-5">Tampa</h1>
-                            <h4 class="mb-3 mt-3 pt-3">Famed for its warm climate and vibrant waterfront, is known for its Cuban-influenced cuisine, cultural diversity, and lively Gasparilla pirate festival.</h4>
+                            <h1 class="mb-3 mt-5 pt-5 city">Tampa</h1>
+                            <h2 class="mb-3 mt-3 pt-3 nickname">Big Guava</h2>
+                            <h4 class="mb-3 mt-3 pt-3 des">Famed for its warm climate and vibrant waterfront, is known for its Cuban-influenced cuisine, cultural diversity, and lively Gasparilla pirate festival.</h4>
                             <!-- <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a> -->
                         </div>
                     </div>
@@ -73,7 +73,7 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 1</h1>
+                    <h1 class="text-decoration-underline event">Event 1</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
                     <img
                         src="./assets/images/restfiller.webp"
@@ -83,7 +83,7 @@
                         id="event1-photo"
                     >
                     <!-- Description ID for API will be retaurant-description -->
-                    <p id="event1-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event1-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
                     <p>
                         <a href="#" id="event1-url">TripAdvisor Link</a>
@@ -92,7 +92,7 @@
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 2</h1>
+                    <h1 class="text-decoration-underline event">Event 2</h1>
                     <!-- Photo ID for API will be attraction-photo -->
                     <img
                         src="./assets/images/attrfiller.jpeg"
@@ -102,7 +102,7 @@
                         id="event2-photo"
                     >
                     <!-- Description ID for API will be attraction-description -->
-                    <p id="event2-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event2-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be attraction-url -->
                     <p>
                         <a href="#" id="event2-url">TripAdvisor Link</a>
@@ -111,7 +111,7 @@
                     <button class="btn-lg">Try again</button>
                 </div>
                 <div class="col m-3 p-3 rounded text-center cards">
-                    <h1 class="text-decoration-underline">Event 3</h1>
+                    <h1 class="text-decoration-underline event">Event 3</h1>
                     <!-- Photo ID for API will be retaurant-photo -->
                     <img
                         src="./assets/images/restfiller.webp"
@@ -121,7 +121,7 @@
                         id="event3-photo"
                     >
                     <!-- Description ID for API will be retaurant-description -->
-                    <p id="event3-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
+                    <p id="event3-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
                     <p>
                         <a href="#" id="event3-url">TripAdvisor Link</a>
