further .css changes
redesign of text on cards to again better match current mainpage.

--- a/atlanta.html
+++ b/atlanta.html
@@ -87,7 +87,7 @@
                     <p id="event1-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
                     <p>
-                        <a href="#" id="event1-url">TripAdvisor Link</a>
+                        <a href="#" id="event1-url" class="link">Trip Advisor Link</a>
                     </p>
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
@@ -106,7 +106,7 @@
                     <p id="event2-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be attraction-url -->
                     <p>
-                        <a href="#" id="event2-url">TripAdvisor Link</a>
+                        <a href="#" id="event2-url" class="link">Trip Advisor Link</a>
                     </p>
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
@@ -125,7 +125,7 @@
                     <p id="event3-description" class ="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius maxime natus dolorum.</p>
                     <!-- URL ID for API will be retaurant-url -->
                     <p>
-                        <a href="#" id="event3-url">TripAdvisor Link</a>
+                        <a href="#" id="event3-url" class="link">Trip Advisor Link</a>
                     </p>
                     <!-- We can use this to randomize a new selection from API -->
                     <button class="btn-lg">Try again</button>
